--- a/crules-website/tsconfig.json
+++ b/crules-website/tsconfig.json
@@ -2,7 +2,17 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@data/*": ["src/data/*"],
+      "@theme/*": ["src/theme/*"]
+    },
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
+  "include": ["src/**/*"],
   "exclude": [".docusaurus", "build"]
 }
